avoid handling too many sentences in take_last_sentence_and_resolve_pronouns

--- a/project/aux/nlp.ipynb
+++ b/project/aux/nlp.ipynb
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,12 +672,13 @@
     "    if verbose:\n",
     "        print(\"Taking the last sentence and resolving pronouns:\")\n",
     "    \n",
+    "    st, _ = move_st(text, len(text) - 1, 4)\n",
     "    result = stanford_nlp.annotate(\n",
-    "        text,\n",
+    "        text[-st:],\n",
     "        properties={\n",
     "           'annotators': 'parse,coref',\n",
     "           'outputFormat': 'json',\n",
-    "           'timeout': 60000,\n",
+    "           'timeout': 100000,\n",
     "        }\n",
     "    )\n",
     "    \n",
