--- a/project/explanation_01.ipynb
+++ b/project/explanation_01.ipynb
@@ -256,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class RuleExplanation01(rule_base.Rule):\n",
@@ -372,7 +374,7 @@
     "                \" because \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
-    "                info.nucleus_proximity.value,\n",
+    "                info.nucleus_proximity,\n",
     "                self.name,\n",
     "                reason,\n",
     "                verbose\n",
