--- a/project/explanation_02.ipynb
+++ b/project/explanation_02.ipynb
@@ -183,7 +183,7 @@
     "                                        if final_sn_text is not None else None\n",
     "                                ), \n",
     "                                relation, \n",
-    "                                info.nucleus_proximity.value,\n",
+    "                                info.nucleus_proximity,\n",
     "                                self.name,\n",
     "                                reason,\n",
     "                                verbose\n",
@@ -280,7 +280,7 @@
     "                \". That is why \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
-    "                info.nucleus_proximity.value,\n",
+    "                info.nucleus_proximity,\n",
     "                self.name,\n",
     "                reason,\n",
     "                verbose\n",
@@ -454,7 +454,7 @@
       "Taking the last sentence and resolving pronouns:\n",
       "\" I'm so worried about our farm, \" she wrote. \n",
       "---> \n",
-      "'' I'm so worried about our farm,'' she wrote.\n",
+      "I'm so worried about our farm,'' she wrote.\n",
       "Taking the first sentence and removing leading words:\n",
       "-- syntactic parsing result\n",
       " (ROOT\n",
@@ -471,8 +471,8 @@
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"'' I'm so worried about our farm,'' she wrote. That is why another letter said \\\"it' stime to plant potatoes.\\\"\",\n",
-      "  \"nucleus\": \"'' I'm so worried about our farm,'' she wrote\",\n",
+      "  \"statement_text\": \"I'm so worried about our farm,'' she wrote. That is why another letter said \\\"it' stime to plant potatoes.\\\"\",\n",
+      "  \"nucleus\": \"I'm so worried about our farm,'' she wrote\",\n",
       "  \"connective\": \". That is why another letter said \",\n",
       "  \"satellite_nucleus\": \"\\\"it' stime to plant potatoes.\\\"\",\n",
       "  \"left_boundary\": 95,\n",
@@ -532,9 +532,10 @@
       "The resolved subject: my\n",
       "Nucleus is surrounded by quotation marks and satellite's satellite contains a speech verb.\n",
       "Taking the last sentence and resolving pronouns:\n",
+      "Substituting 'he' for 'he'.\n",
       "\" And he waited quietly for his turn, instead of pushing the others aside ; showing that he was modest ( ). \n",
       "---> \n",
-      "'' And he waited quietly for his turn, instead of pushing the others aside; showing that he was modest ().\n",
+      "he was modest ().\n",
       "Taking the first sentence and removing leading words:\n",
       "-- syntactic parsing result\n",
       " (ROOT\n",
@@ -579,8 +580,8 @@
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"'' And he waited quietly for his turn, instead of pushing the others aside; showing that he was modest (). That is why my called \\\"I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.\\\"\",\n",
-      "  \"nucleus\": \"'' And he waited quietly for his turn, instead of pushing the others aside; showing that he was modest ()\",\n",
+      "  \"statement_text\": \"He was modest (). That is why my called \\\"I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.\\\"\",\n",
+      "  \"nucleus\": \"He was modest ()\",\n",
       "  \"connective\": \". That is why my called \",\n",
       "  \"satellite_nucleus\": \"\\\"I talked with him, I noticed that his clothes were carefully brushed, his hair in nice order, and his teeth as white as milk.\\\"\",\n",
       "  \"left_boundary\": 888,\n",
