--- a/project/explanation_03.ipynb
+++ b/project/explanation_03.ipynb
@@ -54,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class RuleExplanation03(rule_base.Rule):\n",
@@ -183,7 +185,7 @@
     "                \". Moreover \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
-    "                info.nucleus_proximity.value,\n",
+    "                info.nucleus_proximity,\n",
     "                self.name,\n",
     "                reason,\n",
     "                verbose\n",
@@ -351,14 +353,14 @@
       "        (, ,)))))\n",
       "I saw Beijing, of course, \n",
       "---> \n",
-      "I saw Beijing, of course.\n",
+      "I saw Beijing.\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"I then came to China, a country I had always wanted to visit. Moreover I saw Beijing, of course.\",\n",
+      "  \"statement_text\": \"I then came to China, a country I had always wanted to visit. Moreover I saw Beijing.\",\n",
       "  \"nucleus\": \"I then came to China, a country I had always wanted to visit\",\n",
       "  \"connective\": \". Moreover \",\n",
-      "  \"satellite_nucleus\": \"I saw Beijing, of course.\",\n",
+      "  \"satellite_nucleus\": \"I saw Beijing.\",\n",
       "  \"left_boundary\": 571,\n",
       "  \"right_boundary\": 697,\n",
       "  \"split_point\": 636,\n",
@@ -377,6 +379,172 @@
     "    rule = RuleExplanation03()\n",
     "\n",
     "    with open(\"../parsed/race/train/middle/1251.txt.tree\", \"rt\") as f:\n",
+    "        tree_text = f.read()\n",
+    "\n",
+    "    text, relations = relation_extraction.read_relations(\n",
+    "        tree_text.replace(\"<s>\", \"\").replace(\"<P>\", \"\")\n",
+    "    )\n",
+    "\n",
+    "    expl = relations[\"Explanation\"][0]\n",
+    "    print(text[expl.left.start:expl.right.end])\n",
+    "\n",
+    "    statement =rule.generate_statement(text, expl, verbose=True)\n",
+    "    print(\"\\nRESULT:\")\n",
+    "    if statement is not None:\n",
+    "        print(json.dumps(statement._asdict(), indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Students who improve their reading and writing skills will increase their vocabulary and their ability to use the English language correctly .  As parents , you can play an important role in improving your children 's literacy .  You can make a difference by listening , asking questions , giving information , and reading with your children outside school hours .  Here are 8 tips on how to help your children to read and write : ^ having everyday conversations with your children ^ trying to ask more \" wh - \" questions instead of easy \" yes \" or \" no \" questions ^ encouraging your children to talk about events you do n't know ^ reading to your children each night ^ listening to your children read ^ teaching your children how to use dictionaries ^ talking about your children 's writings ^ practicing filling in forms , writing letters , sending cards or emails You can also encourage your children to join the Reading Challenge Club and discuss the books they are reading together .  In the club , children must read 15 books from the Challenge book list and 5 more books chosen by themselves .  \n",
+      "Nucleus is on the left.\n",
+      "Nucleus's depth <= 100.\n",
+      "Parsing result:\n",
+      "(ROOT\n",
+      "  (S\n",
+      "    (NP\n",
+      "      (NP\n",
+      "        (NP (NNS Students))\n",
+      "        (SBAR\n",
+      "          (WHNP (WP who))\n",
+      "          (S\n",
+      "            (VP (VBP improve)\n",
+      "              (NP (PRP$ their) (NN reading))))))\n",
+      "      (CC and)\n",
+      "      (NP (VBG writing) (NNS skills)))\n",
+      "    (VP (MD will)\n",
+      "      (VP (VB increase)\n",
+      "        (S\n",
+      "          (NP\n",
+      "            (NP (PRP$ their) (NN vocabulary))\n",
+      "            (CC and)\n",
+      "            (NP (PRP$ their) (NN ability)))\n",
+      "          (VP (TO to)\n",
+      "            (VP (VB use)\n",
+      "              (NP (DT the) (NNP English) (NN language))\n",
+      "              (ADVP (RB correctly)))))))\n",
+      "    (. .)))\n",
+      "\n",
+      "Constituencies:\n",
+      "    type  start  end  depth\n",
+      "0    NNS      0    1      5\n",
+      "1     NP      0    1      4\n",
+      "2     WP      1    2      6\n",
+      "3   WHNP      1    2      5\n",
+      "4    VBP      2    3      7\n",
+      "5   PRP$      3    4      8\n",
+      "6     NN      4    5      8\n",
+      "7     NP      3    5      7\n",
+      "8     VP      2    5      6\n",
+      "9      S      2    5      5\n",
+      "10  SBAR      1    5      4\n",
+      "11    NP      0    5      3\n",
+      "12    CC      5    6      3\n",
+      "13   VBG      6    7      4\n",
+      "14   NNS      7    8      4\n",
+      "15    NP      6    8      3\n",
+      "16    NP      0    8      2\n",
+      "17    MD      8    9      3\n",
+      "18    VB      9   10      4\n",
+      "19  PRP$     10   11      7\n",
+      "20    NN     11   12      7\n",
+      "21    NP     10   12      6\n",
+      "22    CC     12   13      6\n",
+      "23  PRP$     13   14      7\n",
+      "24    NN     14   15      7\n",
+      "25    NP     13   15      6\n",
+      "26    NP     10   15      5\n",
+      "27    TO     15   16      6\n",
+      "28    VB     16   17      7\n",
+      "29    DT     17   18      8\n",
+      "30   NNP     18   19      8\n",
+      "31    NN     19   20      8\n",
+      "32    NP     17   20      7\n",
+      "33    RB     20   21      8\n",
+      "34  ADVP     20   21      7\n",
+      "35    VP     16   21      6\n",
+      "36    VP     15   21      5\n",
+      "37     S     10   21      4\n",
+      "38    VP      9   21      3\n",
+      "39    VP      8   21      2\n",
+      "40     .     21   22      2\n",
+      "41     S      0   22      1\n",
+      "42  ROOT      0   22      0\n",
+      "\n",
+      "Sentence starts at 264.\n",
+      "Boundaries: (0, 8, 8, 22)\n",
+      "Left and right VP boundaries: (2, 5), (8, 21)\n",
+      "Umbrella VPs:\n",
+      "Empty DataFrame\n",
+      "Columns: [type, start, end, depth]\n",
+      "Index: []\n",
+      "Nucleus's (left) nucleus doesn't contain '.', '!', '?', or ';' but none of the other two conditions is met.\n",
+      "Will use the whole segment.\n",
+      "Satellite's nucleus is on the left.\n",
+      "Nuclei proximity is NucleusProximity.NEAR\n",
+      "Satellite's (left) nucleus contains '.', '!', '?', or ';'.\n",
+      "Will use the whole segment.\n",
+      "Text extracted from the satellite:\n",
+      "As parents, you can play an important role in improving your children's literacy.  You can make a difference by listening, asking questions, giving information, and reading with your children outside school hours.  Here are 8 tips on how to help your children to read and write : ^ having everyday conversations with your children ^ trying to ask more \" wh - \" questions instead of easy \" yes \" or \" no \" questions ^ encouraging your children to talk about events you do n't know ^ reading to your children each night ^ listening to your children read ^ teaching your children how to use dictionaries ^ talking about your children's writings ^ practicing filling in forms, writing letters, sending cards or emails You can also encourage your children to join the Reading Challenge Club and discuss the books they are reading together.  In the club, children must read 15 books from the Challenge book list and 5 more books chosen by themselves.\n",
+      "Satellite's nucleus contains 'in fact' / 'as a matter of fact' / 'actually' / 'indeed' / 'also'.\n",
+      "Taking the last sentence and resolving pronouns:\n",
+      "Students who improve their reading and writing skills will increase their vocabulary and their ability to use the English language correctly. \n",
+      "---> \n",
+      "Students who improve their reading and writing skills will increase their vocabulary and their ability to use the English language correctly.\n",
+      "Taking the first sentence and removing leading words:\n",
+      "-- syntactic parsing result\n",
+      " (ROOT\n",
+      "  (S\n",
+      "    (PP (IN As)\n",
+      "      (NP (NNS parents)))\n",
+      "    (, ,)\n",
+      "    (NP (PRP you))\n",
+      "    (VP (MD can)\n",
+      "      (VP (VB play)\n",
+      "        (NP (DT an) (JJ important) (NN role))\n",
+      "        (PP (IN in)\n",
+      "          (S\n",
+      "            (VP (VBG improving)\n",
+      "              (NP\n",
+      "                (NP (PRP$ your) (NNS children) (POS 's))\n",
+      "                (NN literacy)))))))\n",
+      "    (. .)))\n",
+      "No tokens before the first NP will be removed because the sentence starts with if/when/as or an imperative verb.\n",
+      "As parents, you can play an important role in improving your children's literacy.  You can make a difference by listening, asking questions, giving information, and reading with your children outside school hours.  Here are 8 tips on how to help your children to read and write : ^ having everyday conversations with your children ^ trying to ask more \" wh - \" questions instead of easy \" yes \" or \" no \" questions ^ encouraging your children to talk about events you do n't know ^ reading to your children each night ^ listening to your children read ^ teaching your children how to use dictionaries ^ talking about your children's writings ^ practicing filling in forms, writing letters, sending cards or emails You can also encourage your children to join the Reading Challenge Club and discuss the books they are reading together.  In the club, children must read 15 books from the Challenge book list and 5 more books chosen by themselves. \n",
+      "---> \n",
+      "As parents, you can play an important role in improving your children's literacy.\n",
+      "\n",
+      "RESULT:\n",
+      "{\n",
+      "  \"statement_text\": \"Students who improve their reading and writing skills will increase their vocabulary and their ability to use the English language correctly. Moreover as parents, you can play an important role in improving your children's literacy.\",\n",
+      "  \"nucleus\": \"Students who improve their reading and writing skills will increase their vocabulary and their ability to use the English language correctly\",\n",
+      "  \"connective\": \". Moreover \",\n",
+      "  \"satellite_nucleus\": \"as parents, you can play an important role in improving your children's literacy.\",\n",
+      "  \"left_boundary\": 266,\n",
+      "  \"right_boundary\": 1369,\n",
+      "  \"split_point\": 410,\n",
+      "  \"nucleus_proximity\": \"near\",\n",
+      "  \"rule\": \"explanation_03\",\n",
+      "  \"reason\": [\n",
+      "    1,\n",
+      "    \"Satellite's nucleus contains 'in fact' / 'as a matter of fact' / 'actually' / 'indeed' / 'also'.\"\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
+    "    rule = RuleExplanation03()\n",
+    "\n",
+    "    with open(\"../parsed/race/train/middle/6287.txt.tree\", \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
     "    text, relations = relation_extraction.read_relations(\n",
