--- a/project/explanation_04.ipynb
+++ b/project/explanation_04.ipynb
@@ -54,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class RuleExplanation04(rule_base.Rule):\n",
@@ -208,7 +210,7 @@
     "                connective, \n",
     "                final_sn_text, \n",
     "                relation, \n",
-    "                info.nucleus_proximity.value,\n",
+    "                info.nucleus_proximity,\n",
     "                self.name,\n",
     "                reason,\n",
     "                verbose\n",
