--- a/project/explanation_06.ipynb
+++ b/project/explanation_06.ipynb
@@ -123,7 +123,7 @@
     "                \". Also, \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
-    "                info.nucleus_proximity.value,\n",
+    "                info.nucleus_proximity,\n",
     "                self.name,\n",
     "                reason,\n",
     "                verbose\n",
