--- a/project/explanation_08.ipynb
+++ b/project/explanation_08.ipynb
@@ -109,7 +109,7 @@
     "                \" then \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
-    "                info.nucleus_proximity.value,\n",
+    "                info.nucleus_proximity,\n",
     "                self.name,\n",
     "                reason,\n",
     "                verbose\n",
