--- a/project/rule_base.ipynb
+++ b/project/rule_base.ipynb
@@ -96,7 +96,10 @@
     "                left_boundary=relation.left.start,\n",
     "                right_boundary=relation.right.end,\n",
     "                split_point=relation.left.end,\n",
-    "                nucleus_proximity=nucleus_proximity,\n",
+    "                nucleus_proximity=(\n",
+    "                    nucleus_proximity.value \n",
+    "                        if nucleus_proximity is not None else \"\"\n",
+    "                ),\n",
     "                rule=rule_name,\n",
     "                reason=reason\n",
     "            )\n",
