--- a/project/explanation_05.ipynb
+++ b/project/explanation_05.ipynb
@@ -125,7 +125,7 @@
     "                \" but \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
-    "                info.nucleus_proximity.value,\n",
+    "                info.nucleus_proximity,\n",
     "                self.name,\n",
     "                reason,\n",
     "                verbose\n",
