--- a/project/explanation_07.ipynb
+++ b/project/explanation_07.ipynb
@@ -108,7 +108,7 @@
     "                \" and \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
-    "                info.nucleus_proximity.value,\n",
+    "                info.nucleus_proximity,\n",
     "                self.name,\n",
     "                reason,\n",
     "                verbose\n",
