fix quotes; do not resolve to pronouns

--- a/project/aux/nlp.ipynb
+++ b/project/aux/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -145,11 +145,12 @@
     "        representative_mention = None\n",
     "        keys = []\n",
     "        for coref in coref_group:\n",
-    "            if coref[\"isRepresentativeMention\"]:\n",
+    "            if coref[\"isRepresentativeMention\"] and coref[\"type\"] != \"PRONOMINAL\":\n",
     "                representative_mention = coref[\"text\"]\n",
     "            keys.append((coref[\"sentNum\"], coref[\"startIndex\"], coref[\"endIndex\"]))\n",
-    "        for key in keys:\n",
-    "            resolution_map[key] = representative_mention    \n",
+    "        if representative_mention is not None:\n",
+    "            for key in keys:\n",
+    "                resolution_map[key] = representative_mention    \n",
     "            \n",
     "    return resolution_map\n",
     "\n",
@@ -341,27 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "en."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -429,10 +410,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def starts_with_quotes(word):\n",
+    "    return word[:1] == '\"' or word[:2] == \"''\" or word[:2] == \"``\"\n",
+    "\n",
+    "\n",
+    "def append_quotation_mark(output_chars, mark):\n",
+    "    if mark == \"`\":\n",
+    "        output_chars.append(\"``\")\n",
+    "    elif mark == \"'\":\n",
+    "        output_chars.append(\"''\")\n",
+    "    else:\n",
+    "        output_chars.append('\"')   \n",
+    "        \n",
+    "        \n",
+    "def fix_quotes(sentence):\n",
+    "    output_chars = []\n",
+    "    quote_stack = []\n",
+    "    pointer = 0\n",
+    "    while pointer < len(sentence):\n",
+    "        start_quote = False\n",
+    "        end_quote = False\n",
+    "        \n",
+    "        if sentence[pointer] == '`':\n",
+    "            if pointer + 1 < len(sentence) and sentence[pointer + 1] == '`':\n",
+    "                start_quote = True\n",
+    "                quote_stack.append(\"``\")\n",
+    "                quotes = \"``\"\n",
+    "                pointer += 1\n",
+    "        elif sentence[pointer] == \"'\":\n",
+    "            if pointer + 1 < len(sentence) and sentence[pointer + 1] == \"'\":\n",
+    "                if len(quote_stack) == 0 or quote_stack[-1] not in {\"''\", \"``\"}:\n",
+    "                    start_quote = True\n",
+    "                    quote_stack.append(\"''\")\n",
+    "                else:\n",
+    "                    end_quote = True\n",
+    "                    if len(quote_stack) > 0:\n",
+    "                        quote_stack.pop()   \n",
+    "                pointer += 1\n",
+    "        elif sentence[pointer] == '\"':\n",
+    "            if len(quote_stack) == 0 or quote_stack[-1] != '\"':\n",
+    "                start_quote = True\n",
+    "                quote_stack.append('\"')\n",
+    "            else:\n",
+    "                end_quote = True\n",
+    "                if len(quote_stack) > 0:\n",
+    "                    quote_stack.pop()\n",
+    "                    \n",
+    "        if not start_quote and not end_quote:\n",
+    "            output_chars.append(sentence[pointer])\n",
+    "            pointer += 1\n",
+    "        else:\n",
+    "            if start_quote:\n",
+    "                if (\n",
+    "                    len(output_chars) > 0 \n",
+    "                        and not output_chars[-1].isspace()\n",
+    "                        and output_chars[-1] not in {'\"', \"``\", \"''\"}\n",
+    "                ):\n",
+    "                    output_chars.append(\" \")\n",
+    "                append_quotation_mark(output_chars, sentence[pointer])\n",
+    "                pointer += 1\n",
+    "                while pointer < len(sentence) and sentence[pointer].isspace():\n",
+    "                    pointer += 1\n",
+    "            else:\n",
+    "                assert end_quote\n",
+    "                while len(output_chars) > 0 and output_chars[-1].isspace():\n",
+    "                    output_chars.pop()\n",
+    "                append_quotation_mark(output_chars, sentence[pointer])\n",
+    "                pointer += 1\n",
+    "                if pointer < len(sentence) and not sentence[pointer].isspace():\n",
+    "                    output_chars.append(\" \")\n",
+    "\n",
+    "    return \"\".join(output_chars)\n",
+    "\n",
+    "\n",
+    "def test__fix_quotes():\n",
+    "    assert fix_quotes(\"He said``Hello!''\") == \"He said ``Hello!''\"\n",
+    "    assert fix_quotes(\"He said '' Hello!''\") == \"He said ''Hello!''\"\n",
+    "    assert fix_quotes(\"He said \\\"Hello! \\\"\") == \"He said \\\"Hello!\\\"\"\n",
+    "    assert (\n",
+    "        fix_quotes(\"He said ``Hello!''and waved at me.\") \n",
+    "            == \"He said ``Hello!'' and waved at me.\"\n",
+    "    )\n",
+    "    assert (\n",
+    "        fix_quotes(\"He said`` \\\"War and Piece\\\" is a great novel.''\") \n",
+    "            == \"He said ``\\\"War and Piece\\\" is a great novel.''\"\n",
+    "    )\n",
+    "    assert (\n",
+    "        fix_quotes(\"He said ``''War and Piece'' is a great novel.''\") \n",
+    "            == \"He said ``'' War and Piece ''is a great novel.''\"\n",
+    "    )\n",
+    "    assert (\n",
+    "        fix_quotes(\"\") \n",
+    "            == \"\"\n",
+    "    )\n",
+    "    assert (\n",
+    "        fix_quotes(\"\\\"\\\"\") \n",
+    "            == \"\\\"\\\"\"\n",
+    "    )\n",
+    "    \n",
+    "    \n",
+    "test__fix_quotes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def process_and_join_tokens(sent, offset=1, resolution_map=None, verbose=False):\n",
@@ -496,7 +583,7 @@
     "            \n",
     "    if len(output_words) > 0 and output_words[0] == \" \":\n",
     "        output_words = output_words[1:]\n",
-    "    return \"\".join(output_words)           \n",
+    "    return fix_quotes(\"\".join(output_words))         \n",
     "\n",
     "\n",
     "def test__process_and_join_tokens():\n",
@@ -549,6 +636,9 @@
     "    assert ( \n",
     "        apply_to_sentence(\"ABCDE He really wanted to go.\", 2, {(1, 2, 3): \"Sam\"})\n",
     "            == \"Sam wanted to go.\"\n",
+    "    )\n",
+    "    assert ( \n",
+    "        apply_to_sentence(\"He said'' Hello! ''\") == \"He said ''Hello!''\"\n",
     "    )\n",
     "    \n",
     "    \n",
