do not lowercase Dr, Mr, Mrs, and Ms

--- a/project/aux/utils.ipynb
+++ b/project/aux/utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -218,14 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def lowercase_first_letter(string):\n",
-    "    if \"\".join(word_tokenize(string)[:1]) != \"I\":\n",
+    "    first_word = \"\".join(word_tokenize(string)[:1])\n",
+    "    \n",
+    "    if first_word.strip(\".\") not in {\"I\", \"Dr\", \"Mr\", \"Mrs\", \"Ms\"}:\n",
     "        return string[:1].lower() + string[1:]\n",
     "    else:\n",
     "        return string\n",
